--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -39,12 +39,12 @@ $colors: (
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222,
-  head:      #eb362a,
+  head:      #ff7400,
   // head:      rgb(241, 152, 19),
   // selva:      #eb5d53,
   // selva:       #F9AA33,
-  selva:       #eb5d53,
-  tail:       #eb362a,
+  selva:       #ff7400,
+  tail:       #ff7400,
   // tail:       rgb(248, 182, 82),
   one:        #e9b44c,
   two:        #7bcfff,
