--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -46,7 +46,7 @@ $colors: (
   selva:       #ff7400,
   tail:       #ff7400,
   // tail:       rgb(248, 182, 82),
-  one:        #e9b44c,
+  one:        #488aff,
   two:        #7bcfff,
   three:      #9ed5ff,
   four:       #bce8ff,
