--- a/src/pages/loading/loading.scss
+++ b/src/pages/loading/loading.scss
@@ -1,3 +1,10 @@
 page-loading {
-
+    // .input{
+    //     border-color: #ccc #ccc #ccc #1ba0e1;
+    //        border-image: none;
+    //        border-style: solid;
+    //        border-width: 1px 1px 1px 3px;
+    //        box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset;
+    //        transition: border-color 0.15s ease-in-out 0s, box-shadow 0.15s ease-in-out 0s;
+    //    }
 }
