--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -35,7 +35,7 @@ $app-direction: ltr;
 
 $colors: (
   primary:    #F9AA33,
-  secondary:  #32db64,
+  secondary:  #69BB7B,
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222,
@@ -46,7 +46,7 @@ $colors: (
   selva:       #ff7400,
   tail:       #ff7400,
   // tail:       rgb(248, 182, 82),
-  one:        #488aff,
+  one:        #387ef5,
   two:        #7bcfff,
   three:      #9ed5ff,
   four:       #bce8ff,
