--- a/src/pages/estimate/estimation-details.scss
+++ b/src/pages/estimate/estimation-details.scss
@@ -1,6 +1,6 @@
 .text-in {
-    color: white;
+    color: black;
     font-style: bold;
-    background: rgb(214, 142, 48);
+    background: rgb(204, 167, 118);
   }
   
