--- a/src/pages/lead/lead.scss
+++ b/src/pages/lead/lead.scss
@@ -12,3 +12,10 @@
 //     margin-left:auto; 
 //     margin-right: auto; 
 // }
+// .fab[mini] {
+
+//     margin: 8px;
+//     width: 80px;
+//     height: 80px;
+//     line-height: 80px;
+// }
